--- a/public/sass/_questionlist.scss
+++ b/public/sass/_questionlist.scss
@@ -1,7 +1,7 @@
 /* questions/list of things style */
 
 #questions {
-	height: 100%;
+	min-height: 100%;
 	padding-top: 50px;
 	background: $dark;
 	color: $white;
